блаблабла (базовая отрисовка AVL)
фвыфвыфвффывыф

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Компутерная игра...</title>
 </head>
 <body>
-    <p>Hello World</p>
+    <!-- <p>Hello World</p> -->
+    <div class="tree">
+        <!-- <div class="circle">1</div> -->
+        <!-- <div class="circle" id="id1">2</div> -->
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
