что-то сделал, надо разбираться тебе

--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1080, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Компутерная игра...</title>
+    <title>AVL Tree Game</title>
 </head>
 <body>
-    <!-- <p>Hello World</p> -->
-    <div class="tree">
-        <!-- <div class="circle">1</div> -->
-        <!-- <div class="circle" id="id1">2</div> -->
-    </div>
+    <div class="tree"></div>
     <script src="main.js"></script>
 </body>
 </html>
