--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
         <button onclick="RotateLeft()" class="game">'Левый Поворот'</button>
         <button onclick="RotateRight()" class="game">'Правый Поворот'</button>
     </div>
+
+        <svg id="treeLines"
+       xmlns="http://www.w3.org/2000/svg"
+       style="position:absolute; top:0; left:0;
+              width:100%; height:100%; pointer-events:none">
+  </svg>
     <div class="tree"></div>
 
-    <!-- <svg id="treeLines"
-       xmlns="http://www.w3.org/2000/svg"></svg> -->
+
     
 </body>
 </html>
